# anima_backend

./: .env  .gitignore  Dockerfile  docker-compose.yml  lt.Dockerfile  main.py  minio-nginx.conf  nginx.conf  pyproject.toml
animation_service/: main.py  pyproject.toml
api_gateway/: main.py  pyproject.toml
api_gateway/api/api_v1/: api.py  deps.py
api_gateway/api/api_v1/endpoints/: animations.py  characters.py  files.py  projects.py  token.py
api_gateway/core/: launch.py  patches.py  settings.py
api_gateway/gateways/: animation_service.py  base.py  file_service.py  keycloak.py  project_service.py
api_gateway/middleware/: authorization.py  exceptions.py
api_gateway/schemas/: __init__.py  animations.py  base.py  files.py  projects.py
api_gateway/services/: animations.py  base.py  file_service.py  files.py  projects.py
core/: settings.py
file_service/: Dockerfile  main.py  pyproject.toml
file_service/alembic/: env.py
file_service/alembic/versions/: 168ad8b2e4a4_change_file_size_type.py  20b44a9d01a2_add_uniqueconstraint_to_file.py  a520feb3a599_add_file.py  c9f7132cc0c1_compiled_animation.py  eefa059548b9_file_table.py
file_service/api/api_v1/: api.py
file_service/api/api_v1/endpoints/: characters.py  files.py
file_service/core/: launch.py  patches.py  settings.py
file_service/middleware/: authorization.py
file_service/models/: __init__.py  base.py  files.py
file_service/repositories/: base.py  files.py
file_service/schemas/: base.py  blender.py  files.py
file_service/services/: base.py  characters.py  files.py
services/: users.py
(+35 files in other folders)
