[tool.poetry]
name = "anima-backend"
version = "0.0.1"
description = "3D animation web services backend"
authors = ["sudden_appearance <kuz.damir.01@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.85.1"}
python-keycloak = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
