[tool.poetry]
name = "Project Service"
version = "0.0.1"
description = "Service for managing projects"
authors = ["sudden_appearance <kuz.damir.01@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.85.1"}
httpx = "^0.23.0"
sqlalchemy = {extras = ["asyncio"], version = "^1.4.44"}
asyncpg = "^0.27.0"
psycopg2-binary = "^2.9.5"
alembic = "^1.8.1"
pyjwt = "^2.6.0"
minio = "^7.1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
